--- a/.classpath
+++ b/.classpath
@@ -7,10 +7,7 @@
 	</classpathentry>
 	<classpathentry kind="src" path="resource"/>
 	<classpathentry kind="src" path="testcases"/>
-	<classpathentry kind="lib" path="libSelenium/lombok-1.18.24.jar"/>
 	<classpathentry kind="lib" path="libSelenium/joda-time-2.0.jar"/>
-	<classpathentry kind="lib" path="libSelenium/selenium-server-4.12.1.jar"/>
-	<classpathentry kind="lib" path="libSelenium/testng-7.8.0.jar"/>
 	<classpathentry kind="lib" path="libOwner/commons-codec-1.11.jar"/>
 	<classpathentry kind="lib" path="libOwner/hamcrest-all-1.3.jar"/>
 	<classpathentry kind="lib" path="libOwner/hamcrest-core-1.3.jar"/>
@@ -47,6 +44,11 @@
 	<classpathentry kind="lib" path="libAllure/okio-1.14.1.jar"/>
 	<classpathentry kind="lib" path="libAllure/slf4j-api-1.7.30.jar"/>
 	<classpathentry kind="lib" path="libAllure/tika-core-1.20.jar"/>
+	<classpathentry kind="lib" path="libSelenium/testng-7.10.0.jar"/>
+	<classpathentry kind="lib" path="libSelenium/jcommander-1.82.jar"/>
+	<classpathentry kind="lib" path="libSelenium/slf4j-api-1.7.36.jar"/>
+	<classpathentry kind="lib" path="libSelenium/selenium-java-4.19.1.jar"/>
+	<classpathentry kind="lib" path="libSelenium/lombok-1.18.30.jar"/>
 	<classpathentry kind="src" path="actions"/>
 	<classpathentry kind="src" path="interfaces"/>
 	<classpathentry kind="src" path="testdata"/>
